<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.omarrujo.calculadora.mainModule.viewModel.OperacionesViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/TextHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="end|bottom"
                android:textColor="@color/white"
                android:textSize="@{viewModel.textSizeHistory}"
                android:text="@{ viewModel.resultHistory }"
                tools:text="0" />

            <TextView
                android:id="@+id/textOperacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                tools:text="0"
                android:ellipsize="end"
                android:maxLength="15"
                android:alpha="@{ viewModel.opacity }"
                android:text="@{viewModel.result.equals(String.valueOf(0)) ? viewModel.result : @string/equal_sign + ' ' + viewModel.result}"
                tools:textSize="30sp"
                android:textSize="@{viewModel.textSizeActually}"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="25">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="12">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/c"
                    android:onClick="@{ () -> viewModel.onDeleteScreenButtonClick( 1 ) }"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/orange" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBackSpace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:onClick="@{ () -> viewModel.onDeleteScreenButtonClick( 2 ) }"
                    android:backgroundTint="@color/black"
                    android:text="@string/backspace"
                    android:textSize="20sp"
                    android:textColor="@color/orange" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPercent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/percent"
                    android:onClick="@{() -> viewModel.onOperatorButtonClick('%')}"
                    android:textSize="20sp"
                    android:textColor="@color/orange" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDiv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/division"
                    android:onClick="@{() -> viewModel.onOperatorButtonClick('÷')}"

                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="12">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSeven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/seven"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(7)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/eight"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(8)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/nine"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(9)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/multiplier"
                    android:onClick="@{() -> viewModel.onOperatorButtonClick('×')}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="12">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/four"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(4)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/five"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(5)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSix"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/six"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(6)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMinus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/minus"
                    android:onClick="@{() -> viewModel.onOperatorButtonClick('-')}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="12">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/one"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(1)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/two"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(2)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnThree"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/three"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(3)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPlus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/plus"
                    android:onClick="@{() -> viewModel.onOperatorButtonClick('+')}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="12">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangeCalculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/changeCalculator"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnZero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/zero"
                    android:onClick="@{() -> viewModel.onDigitButtonClick(0)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPoint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/black"
                    android:text="@string/point"
                    android:onClick="@{ () -> viewModel.onPutPointButtonClick() }"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEqual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/orange"
                    android:text="@string/equal"
                    android:onClick="@{() -> viewModel.onChangeSizeButtonClick( 1 )}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>